--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@headlessui/react": "^1.7.3",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.4.0",
+    "@tailwindcss/forms": "^0.5.3",
     "@tanstack/react-query": "^4.10.0",
     "@trpc/client": "10.0.0-proxy-beta.17",
     "@trpc/next": "10.0.0-proxy-beta.17",
@@ -24,7 +25,9 @@
     "next-auth": "^4.12.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.6.0",
     "superjson": "1.9.1",
+    "tailwind-merge": "^1.7.0",
     "zod": "^3.18.0"
   },
   "devDependencies": {
